new rules of deck

--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
             <div id="timer"></div>
         </div>
         <canvas id="gameCanvas"></canvas>
+        <div id="table-zone"></div>
         <div id="player-controls">
-            <button id="end-turn">End Turn</button>
+            <button id="play-to-table" style="display:none;">Выложить на стол</button>
+            <button id="cancel-selection" style="display:none;">Отменить выбор</button>
+            <button id="end-turn" style="display:none;">Подтвердить ход</button>
         </div>
     </div>
     <script src="src/js/game.js"></script>
