--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <canvas id="gameCanvas"></canvas>
         <div id="table-zone"></div>
         <div id="player-controls">
+            <button id="draw-from-discard" style="display:none;">Взять из сброса</button>
+            <button id="draw-from-reserve" style="display:none;">Взять из резерва</button>
             <button id="play-to-table" style="display:none;">Выложить на стол</button>
             <button id="cancel-selection" style="display:none;">Отменить выбор</button>
             <button id="end-turn" style="display:none;">Подтвердить ход</button>
