UI fixed, new bots test

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="game-container">
+        <div id="timer"></div>
         <canvas id="gameCanvas"></canvas>
         <div id="room-header">
             <span id="room-id"></span>
